--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -40,7 +40,7 @@
                                 <div class="col-md-4 col-sm-4 ">
                                     <div id="crop-avatar">
                                         <!-- Current avatar -->
-                                        <img class="img-responsive avatar-view profile-picture" src="~/Content/images/user.png" alt="Avatar" title="Change the avatar">
+                                        <img class="img-responsive avatar-view profile-picture" src="@Model.ImageToBase64()" alt="Avatar" title="Change the avatar">
                                     </div>
                                 </div>
                             </div>
