2023-01-16 Se agrega redimensionamiento de imagen a Directorio.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -193,6 +193,7 @@
                                                             <li class="@(ViewBag.TercelNivel == "IT_Inventory_smartphone" ? "current-page" : null )"><a href="@Url.Action("Smartphone", "IT_Inventory_items")">Smartphones</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "IT_inventory_cellular_plans" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_inventory_cellular_plans")">Planes</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "IT_inventory_cellular_line" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_inventory_cellular_line")">L&iacute;neas</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_extensiones" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_extensiones")">Extensiones</a></li>
                                                         </ul>
                                                     </li>
                                                     <li class="@(ViewBag.SegundoNivel == "IT_inventory_tipos_accesorios" ? "current-page" : null )"><a href="@Url.Action("index", "IT_inventory_tipos_accesorios")">Tipos de Accesorios</a></li>
