--- a/CódigoFuente/BitacorasProduccion/Views/Contacts/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Contacts/Index.cshtml
@@ -32,8 +32,8 @@
 
     <style>
         .profile-picture {
-            width: 170px !important;
-            height: 170px !important;
+            width: 160px !important;
+            height: 160px !important;
         }
     </style>
 }
@@ -134,7 +134,7 @@
 
                                             <div class="x_content">
                                                 <div class="col-sm-12">
-                                                    <div class="left col-sm-7">
+                                                    <div class="left col-md-7 col-sm-12">
                                                         <h2>@Html.DisplayFor(model => empleado.ConcatNombre)</h2>
 
                                                         <ul class="list-unstyled">
@@ -149,10 +149,10 @@
                                                             <li><i class="fa fa-external-link"></i> <strong>Ext.: </strong> @Html.DisplayFor(model => empleado.extension) </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="right col-sm-5 text-center">
+                                                    <div class="right col-md-5 col-sm-12 text-center">
                                                         @if (empleado.id_fotografia.HasValue)
                                                         {
-                                                            <img src="@empleado.ImageToBase64()" alt="" class=" profile-picture img-circle img-fluid" >
+                                                            <img src="@empleado.ImageToBase64(220,220)" alt="" class="img-circle img-fluid" >
                                                         }
                                                         else
                                                         {
