--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -1,10 +1,7 @@
 ﻿@model Portal_2_0.Models.empleados
 
 @{
-    ViewBag.Title = "Detalles de Empleados";
-    ViewBag.PrimerNivel = "recursos_humanos";
-    ViewBag.SegundoNivel = "empleados";
-    ViewBag.ControllerName = "Empleados";
+   
 }
 
 @section estilos
@@ -141,7 +138,7 @@
                 </div>
                 <div>
                     <br />
-                    <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
+                    <a onclick="volverAtras()" class="btn btn-round btn-info btm-sm" title="Volver" style="color:white">
                         <i class="fa fa-arrow-circle-left"></i> Volver al listado
                     </a>
                 </div>
